National: fixed minor z-index issue.

--- a/web/interface/themes/national/css/default.css
+++ b/web/interface/themes/national/css/default.css
@@ -953,7 +953,7 @@ div.truncateField {
 }
 .truncateField .moreLink,
 .truncateField .lessLink {
-    z-index: 1000;
+    z-index: 110;
     height: 1.5em;
     background-color: inherit;
 }
